@@ -1,0 +1,13 @@
+/* -*- Mode: C; indent-tabs-mode: t; c-basic-offset: 8; tab-width: 8 -*- */
+
+/* 
+   cong-dispspec-gxx.h
+   
+   This file will be included multiple times, with different results.
+*/
+
+GXX_STRUCT_BEGIN_ELEMENT("format", CongSerialisationFormat, serialisation_format)
+     GXX_STRUCT_ATTRIBUTE_STRING ("extension", extension, TRUE, "")
+GXX_STRUCT_END_ELEMENT()
+
+
