@@ -12,6 +12,14 @@
 /* Get rid of all gxx macros: */
 #include "gxx-undefine-shared-macros.h"
 
+#define GXX_STRUCT_BEGIN_ELEMENT(xml_name, type_name, fn_name_frag) \
+xmlNodePtr gxx_generated_object_to_xml_tree_fn_##fn_name_frag (const type_name *inst, xmlDocPtr xml_doc) { \
+  const gchar * const tag_name = xml_name; \
+  xmlNodePtr xml_node; \
+  g_return_val_if_fail (inst, NULL); \
+  g_return_val_if_fail (xml_doc, NULL); \
+  xml_node = xmlNewDocNode (xml_doc, NULL, xml_name, NULL); 
+
 #define GXX_STRUCT_BEGIN_ELEMENT_WITH_CONSTRUCTOR(xml_name, type_name, fn_name_frag) \
 xmlNodePtr gxx_generated_object_to_xml_tree_fn_##fn_name_frag (const type_name *inst, xmlDocPtr xml_doc) { \
   const gchar * const tag_name = xml_name; \
